--- a/05-phd-marinebiology.qmd
+++ b/05-phd-marinebiology.qmd
@@ -1,134 +1,226 @@
-# PhD Marine Biology
+# Ph.D. Marine Biology
 
-## Program Description 
+## Program Description
 
+### Degree Overview
+
+Ph.D. students work with their advisor and Doctoral Guidance Committee to develop a plan of study that includes required core courses, competency requirements, and a viable dissertation research program.
+
+The **Doctoral Guidance Committee** is typically established by the end of the **first semester** and should meet by the end of the **second semester**. The student presents a preliminary research proposal to the committee that demonstrates the **soundness, originality, and feasibility** of the planned research. The Guidance Committee is responsible for approving the proposal and overseeing the qualifying examination through which the student advances to doctoral candidacy. The **Doctoral Dissertation Committee** is established at the time of advancement to candidacy.
+
+To earn the Ph.D. degree, students must:
+
+- Complete an original dissertation that contributes new knowledge  
+- Present dissertation results in a public seminar  
+- Pass an oral dissertation defense (private examination) with the Dissertation Committee  
+- Have the dissertation approved by the Dissertation Committee and accepted by the Graduate School  
+
+All students are expected to present research publicly (including at the UNH Graduate Research Conference) and to gain teaching and/or mentoring experience.
+
+---
+
+## Credit Requirements
+
+There is no specific minimum credit requirement for the Ph.D., though students must complete required core courses and meet competency and milestone requirements.
+
+Up to **8 graduate credits** may be transferred from another institution if:
+- They were not counted toward another degree  
+- A grade of B or higher was earned  
+- The transfer is approved by the advisor, committee, and Graduate School  
+
+---
+
+## Required Courses and Competencies
+
+All Ph.D. Marine Biology students must complete the following:
+
+1. **BIOL 901 – Introductory Graduate Seminar**  
+   A first-semester course focusing on key information and skills for a successful transition into graduate study, including program expectations and cohort building.
+
+2. **Contemporary Techniques (2 courses)**  
+   - Two courses in contemporary research techniques  
+   - At least **one must be quantitative**  
+   - Course selection should be determined with the advisor or Graduate Program Coordinator  
+
+3. **Writing and Communication (1 course)**  
+   - May be fulfilled by prior graduate coursework (if approved) or by completing a graduate-level course  
+   - Recommended courses often include:  
+     - BIOL 902 – Writing and Publishing Science  
+     - BIOL 950 – Scientific Communication  
+
+4. **Marine-Focused Course (1 course)**  
+   - May be fulfilled by prior approved graduate coursework or by completing a marine-focused graduate course  
+
+5. **Field Experience Requirement**  
+   - May be fulfilled through a graduate course with a substantial field component, or  
+   - Field research conducted in support of dissertation research  
+
+6. **Teaching Experience Requirement**  
+   - Ph.D. students must serve as a Teaching Assistant for **one semester**, or demonstrate equivalent prior teaching experience.
+
+---
 
 ## Learning Outcomes
 
+### Core Knowledge
+Demonstrate expert knowledge within the subdiscipline relevant to the dissertation research and broad knowledge of marine biology.
+
+### Critical Thinking
+Critically evaluate and integrate qualitative and quantitative research to develop original hypotheses.
+
+### Research
+Synthesize research methods and analytical approaches to conduct an independent, original research program that contributes new knowledge.
+
+### Communication
+Effectively communicate scientific concepts, methods, and findings to scientific audiences, stakeholders, and the public.
+
+### Professionalism
+Conduct research ethically and responsibly while engaging with the broader scientific community.
+
+---
 
 ## Program Requirements and Timeline
 
+### Committee Structure
 
-### Committee
+Ph.D. committees typically include **five members**:
+- The advisor (chair)  
+- One additional DBS faculty member  
+- Three additional members, **at least two of whom must be external to DBS**
 
-Committees are comprised of five people: your advisor, another DBS faculty member, and three additional people. At least two committee members must be external to DBS. Members of UNH must be part of the graduate faculty (which is an easy application if they aren't already graduate faculty). For non-UNH members, you must submit a CV on their behalf. All committee members should have a PhD or commensurate experience.
+Additional requirements:
+- UNH committee members must be part of the Graduate Faculty (or obtain Graduate Faculty status)  
+- For non-UNH members, a CV must be submitted  
+- All members should hold a Ph.D. or have commensurate experience
 
+---
 
-### Credit Requirements
+## Enrollment and Registration
 
-The M.S. degree requires completion of a minimum of 30 credits, 6-¬10 of which are earned for thesis research (BIOL 899 Master's Thesis ). 
+Graduate students must maintain continuous enrollment in fall and spring through coursework, research registration, or continuing enrollment.
 
-There is no specific credit requirement for the Ph.D., though students must meet curriculum requirements.
+**Full-time status:**
+- 9+ credits, or  
+- Doctoral Research (BIOL 999), or  
+- Holding an assistantship (minimum 6 credits or BIOL 999)
 
-Up to 8 graduate credits from another institution may be transferred, provided the credits were not counted toward another degree, and the course grade was a B or higher. Petitions requesting transfer credit must be supported by the advisor and graduate committee, and approved by the UNH Graduate School.
-Students admitted via the Accelerated Master's (AM) process may apply up to 12 credits of prior upper-level UNH coursework in accordance with AM policies.
+Students registered for continuing enrollment (GRAD 800) are not eligible for assistantships.
 
-The level of the courses taken to meet registration requirements is not specified. However, taking non-graduate classes does not move one towards degree completion, so taking undergraduate classes is not a common practice. A grad student cannot petition to take a 500-level course, however 500-level courses can be audited by graduate students with the cost of the course at the expense of the graduate student.
+Students should consult their advisor regarding appropriate course load in light of research, teaching, and field obligations.
 
-Students should discuss with their advisor and committee which courses will be most useful, and what course load makes sense in light of specific research and assistantship obligations (for example, an intense field season). 
+---
 
-How many credits to take, and financial implications: 
+## Course and Credit Policies
 
-Graduate students are normally required to maintain continuous enrollment each Fall and Spring semester by registering for courses, research (Grad 900/BIOL 999), or continuing enrollment (Grad 800) (see below for distinctions). Students who don’t register for the Fall and Spring semesters will have their degree status discontinued.
+**Graduate Courses**
+- 800- and 900-level courses count toward degree requirements  
+- Must be taken for a letter grade (if graded option available)
 
-Graduate students registered for 9 or more credits, Master's Continuing Research (Grad 900), or Doctoral Research (999) are classified as full-time students. Students holding assistantship appointments are also considered full time and must register for a minimum of 6 credits, or Doctoral Research (999) each semester. Students registered for Continuing Enrollment (GRAD 800) are not eligible to hold an appointment. For details, please see the Graduate School website (https://catalog.unh.edu/graduate/course- descriptions/grad).
+**700-Level Courses**
+- Up to 12 credits may count toward graduate degree (by petition)  
+- Must be outside the student’s program  
+- Must include additional graduate-level requirements  
 
-Students on assistantships (TA or RA) pay reduced mandatory fees (fee information: https://www.unh.edu/business-services/tuitgrad); this benefit applies no matter how many credits you’re taking. Tuition is commonly waived or covered for students on TA or RA appointments; however, mandatory fees remain the responsibility of the student. Students on assistantship in the spring semester can have tuition waived for summer courses offered by the Graduate School (GRAD prefix).
+**Undergraduate Courses (<700 level)**
+- May be taken if necessary for background preparation  
+- Do not count toward graduate degree credits  
 
-Students enrolled for more than 16 credits pay additional tuition based on the number of additional credits (https://www.unh.edu/business-services/tuitgrad). 
+**Audited Courses**
+- Allowed with advisor and instructor approval  
+- Count toward enrollment requirements but not degree credits  
 
-Doctoral students who have advanced to candidacy may petition each semester to waive fees if they meet the specified conditions (https://catalog.unh.edu/graduate/general-information/fees-financial-support/).
+**Transfer Credit**
+- Up to 8 credits may be transferred (B or higher; not counted toward another degree)  
+- Transfer request form: https://gradschool.unh.edu/academics/forms-policies  
 
-Tuition and fee information from UNH Business Services is available at https://www.unh.edu/business-services/tuitgrad; Graduate School information about fees and financial support is at  https://catalog.unh.edu/graduate/general-information/fees-financial-support/ .
+**Useful links**
+- Graduate School enrollment policies and forms: https://gradschool.unh.edu/academics/forms-policies  
+- UNH Course Search: https://courses.unh.edu/  
+- Graduate course catalog: https://catalog.unh.edu/graduate/  
+- Graduate student resources and deadlines: https://gradschool.unh.edu/graduate-student-resources  
 
-Which courses count:
+---
 
-Graduate courses are numbered 800- or 900-level. Course descriptions can be found in the online Graduate Course Catalog (https://catalog.unh.edu/graduate/). If there is a graded option, graduate courses may not be taken Pass/Fail.
+## Change of Degree Status (M.S. to Ph.D.)
 
-Graduate credit for 700-level courses: 700-level courses are advanced undergraduate courses. In rare cases graduate degree students may petition to earn graduate credit for up to 12 credits in 700-­level courses, provided the credits are taken in a program other than the one in which the student is seeking the degree and provided such courses are approved by the student's adviser, graduate program coordinator, and the dean of the Graduate School. Such courses must be taken for a letter grade. Petitions must include what additional requirements or expectations will be required of the student to make the course a graduate level experience.  Petition requests must be made prior to enrolling in the course and are not guaranteed.  Petition forms are available at https://gradschool.unh.edu/academics/forms-policies.
+M.S. graduates typically pursue employment or further study elsewhere after completing the thesis. In some cases, an M.S. student may petition to continue into the Ph.D., either after completing the M.S. or (rarely) by converting before completing the M.S.
 
-Undergraduate courses below 700-level: While taking non-graduate classes is generally discouraged, in some cases, graduate students may need background or training that can best be obtained by taking an upper-level undergraduate class, if no equivalent course is offered at the graduate level. Undergraduate level courses taken by graduate students are billed at the graduate rate, must be taken for a letter grade, and are subject to the Graduate School’s failing grade policy. Courses taken below the 700-level cannot count as graduate credit.
+Key points:
+- Ph.D. admission is **not automatic** upon completion of the M.S.  
+- Conversion from M.S. directly to Ph.D. enrollment occurs only in **extraordinary circumstances**  
+- If appropriate, conversion should occur no later than the beginning of the **third semester** of enrollment  
+- The advisor will convene the DBS Graduate Program Committee and the student’s M.S. committee to consider the request  
+- If supported, a change-of-degree form is submitted for Graduate School approval: https://gradschool.unh.edu/academics/forms-policies  
 
-Audits: Graduate students may audit courses with the approval of their advisor and the instructor. Credits for an audited course in which a graduate student is formally enrolled may be counted toward enrollment requirements for appointments and assistantships. (Note that tuition for audited courses is the same as for credit courses.)
+Students who change to a Ph.D. program (and have not already done so) must complete **Responsible Conduct of Research (RCR)** training: https://www.unh.edu/research/rcr-training-unh
 
-Graduate credit from another institution: Students can request to transfer up to 8 credits of graduate credit from another school, provided the credits were not counted toward another degree, and the grade was at least a B. The transfer request form is available at (https://gradschool.unh.edu/academics/forms-policies). 
+---
 
-Where to find enrollment policy, course and registration information:
-• Graduate School enrollment policies and petition forms: https://gradschool.unh.edu/academics/forms-policies
-• the UNH Course Search Form searches all courses (grad and undergrad) (https://courses.unh.edu/)https://courses.unh.edu/
-• descriptions of graduate courses are in the online catalog https://catalog.unh.edu/graduate/
-• registration information and deadlines are posted at the Graduate School website https://gradschool.unh.edu/graduate-student-resources 
-
-
-### Change of Degree Status, M.S. to Ph.D. Enrollment
-
-M.S. graduates normally go elsewhere for further study or for employment after completing their thesis. However, students enrolled for an M.S. degree may petition the Graduate School to continue for the Ph.D. after receipt of the M.S. or, rarely, to convert to Ph.D. enrollment without first completing the M.S. If a student wishes to convert from M.S. to Ph.D., the advisor will convene a meeting of the DBS GPC and the student's Master’s Thesis Committee to consider the application. If the application has departmental support, a "change of degree" form is then completed and submitted for Graduate School approval (https://gradschool.unh.edu/academics/forms-policies).
-
-Admission to Ph.D. enrollment should not be considered automatic on completion of the M.S., and conversion from M.S. directly to Ph.D. enrollment is done only in extraordinary circumstances. Conversion, when appropriate, should occur no later than the beginning of the third semester of enrollment.
-
-Students who change to a Ph.D. program (and have not already done so) are required to attend the Responsible Conduct of Research Training. Further information is available at https://www.unh.edu/research/rcr-training-unh.
-
+## Research Proposal, Qualifying Exam, and Advancement to Candidacy
 
 ### Research Proposal
-Ph.D. students present and defend their formal research proposal to their Guidance Committee in order to be advanced to candidacy, normally in the second or third year. However, a solid draft of the proposal should be shared with the committee by the end of the second semester, and presented in seminar form at least to the committee, and preferably for a wider (public) audience.
 
-Please contact individual Program Coordinators to find guidance in terms of proposal length and format.
+Ph.D. students present and defend a formal research proposal to their Guidance Committee as part of advancement to candidacy, typically in the **second or third year**.
 
-Ph.D. qualifying exam and advancement to candidacy
+Expectations:
+- A solid proposal draft should be shared with the committee by the end of the **second semester**  
+- The proposal should be presented in seminar form at least to the committee, and preferably to a broader audience  
+- Students should consult program leadership for proposal length and format expectations  
 
-Following approval of the research proposal by their committee, students who wish to be admitted to doctoral candidacy must pass a formal qualifying examination that assesses both broad basic knowledge of the student’s field, and topics central to the project. The student is responsible for scheduling both parts of the exam; plan well ahead to account for committee members’ travel plans, sabbaticals, etc. The written portion of the qualifying exam should be taken no later than the end of the fifth semester, though it may be delayed beyond that point if necessary.  The oral portion of the exam follows successful completion of the written part, usually within a few weeks. 
+### Qualifying Examination
 
-Student’s should contact their respective degree programs to be provided specific details regarding the procedure of both the written and oral comprehensive exam.
+After the proposal is approved, students must pass a qualifying examination assessing:
+- Broad foundational knowledge in the field  
+- Knowledge central to the dissertation project  
 
-When the student has passed both parts of the qualifying exam, the advisor will inform the Graduate School and recommend that the student be advanced to candidacy in the Ph.D. degree program by submitting the appropriate form (https://gradschool.unh.edu/academics/forms-policies) . At this point, the student’s Doctoral Dissertation Committee will be nominated using the Graduate School form (https://gradschool.unh.edu/academics/forms-policies) .
+Structure:
+- **Written exam:** typically no later than the end of the **fifth semester** (may be delayed if necessary)  
+- **Oral exam:** follows successful completion of the written exam, usually within a few weeks  
 
-### Annual Progress Report and Review Meeting
-Each student will meet with a representative of the Graduate Program Committee in the spring semester to review progress and identify any concerns. The purpose of this meeting is to:
+Students are responsible for scheduling both parts of the exam and should plan well in advance.
 
-1) Encourage the student to think critically about his/her own progress (or lack thereof) and goals for both the immediate and long-term future.
+After passing both parts:
+- The advisor submits the required Graduate School form to advance the student to candidacy: https://gradschool.unh.edu/academics/forms-policies  
+- The Doctoral Dissertation Committee is nominated using the Graduate School form: https://gradschool.unh.edu/academics/forms-policies  
 
-2) Increase a sense of accountability on behalf of graduate students, and motivate students moving at a slow pace to increase their productivity and involvement in the program.
+---
 
-3) Remind students that to be a truly successful graduate student, one should (ideally) demonstrate success in multiple areas (research, funding, teaching, service), and provide examples for how to do that.
+## Annual Progress Review
 
-4) Provide a clear paper trail in case situations arise in which there is confusion or disagreement about a student's progress.
+Each spring, students participate in an annual progress review with a representative of the Graduate Program Committee.
 
-The annual meeting also provides an opportunity for students to raise any concerns, and provide feedback about the program and their graduate experience.
+**Goals of the review:**
+- Encourage reflection on progress and goals  
+- Support timely degree completion  
+- Provide mentorship and feedback  
+- Document progress and address concerns  
 
-In preparation for progress review meetings, 
-• The student writes a report about their progress, and submits it to their advisor and committee for review and comments. This should occur in the first half of the spring semester. Instructions and template for the student report are available at the program website, or from the department. 
-• The advisor reviews and signs the student’s report, and then also fills out an evaluation describing his/her view of the student's progress, and including a summary of the most recent committee meeting – which should take place earlier in the same semester. Instructions and template for the advisor report are available at the program website, or from the department. Reports must be submitted at least one week before scheduled meetings, normally by mid-April.
-• Instructors for whom the student has served as a teaching assistant provide comments on their teaching. (If instructors have previously provided feedback as part of fellowship or other applications, they needn’t do so again.) Comments must be submitted at least one week before scheduled meetings, normally by mid-April.
+**Preparation includes:**
+- Student progress report submitted to advisor and committee  
+- Advisor evaluation and summary of committee meeting  
+- Teaching feedback (if applicable)
 
-All reports and comments will be submitted to the designated departmental staff person, who will schedule a review meeting for each student with a member of the GPC (not including the advisor or, preferably, other members of the student’s committee), normally between mid-April and mid-May. 
+All materials are submitted to the designated departmental staff member, who schedules the review meeting (typically mid-April through mid-May). Summary feedback is shared with the student, advisor, and Program Coordinator. Failure to complete the process may result in a registration hold.
 
-Following the meetings, comments and suggestions will be shared with the student and advisor, as well as the Program Coordinator. If there is material in the comments that is confidential or should not be shared, it may be withheld at the discretion of the Program Coordinator.
+---
 
-Students who do not complete the review process by the specified date will have a hold placed on their registration by the Graduate School until they have resolved the situation.
+## Completing the Degree
 
-### Completing the Degree
+Students are responsible for understanding all program and Graduate School requirements, including:
 
-As a graduate student, you are responsible for knowing what you need to do to get your degree: your advisor and committee should offer guidance, but the primary responsibility is yours. Make sure you are thoroughly familiar with:
+- Coursework and competency requirements  
+- Committee formation and required paperwork  
+- Dissertation formatting and submission requirements  
+- Qualifying exam and defense procedures  
+- All relevant deadlines  
 
-• the program’s academic requirements (credits, courses, competencies);
-• necessary paperwork (committee nomination, Ph.D. candidacy, etc.);
-• thesis/dissertation format and filing requirements (set by the Graduate School);
-• format and scheduling procedures for qualifying exams and thesis/dissertation defense; and all relevant deadlines.
+A public seminar and dissertation defense are required. The dissertation must be provided to the committee at least **two weeks** before the defense.
 
-If you have questions about what you need to do, or how to do it, consult your advisor, the Program Coordinator, and/or the UNH Graduate School. If there is information you think needs to be added or clarified in this handbook, please tell the Program Coordinator.
+Final dissertation submission must meet Graduate School deadlines and formatting requirements.
 
-For both the MS thesis and Ph.D. dissertation students are required to give a public, advertised seminar on the UNH campus, followed by a private examination by the student's committee, which may require revisions. The committee is responsible for assessing and approving the final version of the thesis. The committee should be provided with a complete copy of the thesis for review at least two full weeks before the defense.
+---
 
-The student is responsible for transmitting necessary paperwork to the Graduate School, and fulfilling Graduate School requirements for electronic submission of the thesis, by the appropriate deadline.
+## Graduation
 
-
-### Graduation
-
-The Graduate School website provides detailed information on graduation procedures, including deadlines, filing “intent to graduate” notification, submitting theses/dissertations to the Graduate School, and Commencement: http://www.gradschool.unh.edu/graduation.php
-
-### Student Rights and Key Policies
-
-UNH’s statement on Student Rights, Rules, and Responsibilities applies to graduate students as well as to undergraduates. It can be found at https://catalog.unh.edu/srrr/ 
-See Graduate School Catalog for general information, policies, and student rights: https://catalog.unh.edu/graduate/
-
-
+The Graduate School provides detailed procedures and deadlines for graduation, including intent-to-graduate forms, dissertation submission, and Commencement:  
+http://www.gradschool.unh.edu/graduation.php
